# rocket-simple-authorization

./: Cargo.toml
examples/: get_authorization.rs  get_system_time.rs  get_system_time_api.rs
src/: macros.rs
