[package]
name = "rocket-simple-authorization"
version = "0.10.5"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/magiclen/rocket-simple-authorization"
homepage = "https://magiclen.org/rocket-simple-authorization"
keywords = ["rocket", "server", "web", "authorization", "authorize"]
categories = ["parser-implementations", "web-programming"]
description = "This crate provides a request guard builder used for authorization."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = "0.5.0-rc.4"

[dev-dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
short-crypt = "1"
